--- a/style.css
+++ b/style.css
@@ -128,6 +128,12 @@ select {
     font-size: 18px;
 }
 
+#loading {
+    font-size: 18px;
+    color: #ff1b32;
+    text-align: center;
+}
+
 @media(max-width:500px) {
     body {
         font-size: 16px;
